--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,26 +7,28 @@
 
 header{
 	background: #4aaaa5;
-	border-color: #cccccc;
-	width: 25%;
+	width: 20%;
 	align-content: center;
 	text-align: center;
-	padding: 5px;
-	margin-left: 200px;
-	margin-right: 300px;
+	padding: 15px;
+	margin-left: 105px;
+	margin-right: 475px;
 	float: left;
+	font-family:'Georgia', Times, Times New Roman, serif;
 
 }
 
 h1{
 	font-size: 28px;
 	color: #ffffff;
+	font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
 h2{
 	color: #4aaaa5;
 	font-size: 24px;
 	margin-left: 30px;
+	font-family: 'Georgia', Times, Times New Roman, serif;
 	/*border-bottom-color: #dddddd
 	border-bottom-style: solid;*/
 }
@@ -35,6 +37,7 @@ h3{
 	color: #4aaaa5;
 	font-size: 20px;
 	margin-left: 30px;
+	font-family: 'Georgia', Times, Times New Roman, serif;
 	/*border-bottom-color: #dddddd
 	border-bottom-style: solid;*/
 
@@ -43,6 +46,7 @@ h3{
 .title{
 	border-bottom-color: #dddddd
 	border-bottom-style: solid;
+	border-width: 2px;
 }
 
 .links{
@@ -50,7 +54,7 @@ h3{
 	text-align: center;
 	width: 5%;
 	float: left;
-	padding-top: 20px;
+	padding-top: 25px;
 
 }
 
@@ -58,31 +62,57 @@ h3{
 	font-size: 12px;
 }
 
+.socialimage{
+	width: 50px;
+	height: 50px;
+	margin: 10px;
+
+}
+
+.messagebox{
+	
+	width: 625px;
+	height: 200px;
+	margin: 5px;
+	border-width: 2px;
+	border-color: #dddddd;
+	border-style: solid;
+
+}
+
+.portfolioimage{
+	width: 100px;
+	height: 100px;
+	margin: 50px;
+	float: left;
+}
+
 #maincontent{
 	clear: both;
-	width: 80%;
-	height: 500px;
+	width: 100%;
+	height: 550px;
 	margin: 0 auto;
-	/*background-color: grey;*/
+	background-image: url("assets/images/cork-wallet.png");
 	border-style: solid;
 	border-top-color: #dddddd;
 	border-bottom-color: #4aaaa5;
 	border-width: 5px;
+
 }
 
 #mainbody{
 	float: left;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	background-color: #ffffff;
 	border-color: #dddddd;
 	border-style: solid;
 	border-width: 5px;
-	width: 450px;
-	height:350px;
+	width: 650px;
 	padding: 5px;
-	margin: 50px;
-	/*position: abolute;
-	left: 10px;
-	top: 10px;*/
+	margin-left:100px; 
+	margin-top: 50px;
+	margin-right: 50px;
+	align-content: center;
 
 }
 
@@ -98,35 +128,50 @@ h3{
 
 #connect{
 	float: left;
-	/*align-content: center*/
+	align-content: center;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	width: 270px;
+	padding: 5px;
+	margin: 50px;
 	background-color: #ffffff;
 	border-color: #dddddd;
 	border-style: solid;
 	border-width: 5px;
-	width: 350px;
-	height: 250px;
-	padding: 5px;
-	margin: 50px;
-	/*position: absolute;
-	top: 10px;
-	right: 10px;
-*/
+
 }
 
-.socialimage{
-	width: 75px;
-	height: 75px;
+
+
+#inputbox{
+	background-color: #ffffff;
+	border-color: #dddddd;
+	border-style: solid;
+	border-width: 2px;
+	width: 625px;
+	height: 14px;
 	margin: 5px;
+}
+
+#submit{
+	background: #4aaaa5;
+	align-content: center;
+	text-align: center;
+	padding: 15px;
+	margin: 10px;
+	float: left;
+	font-family:'Georgia', Times, Times New Roman, serif;
 }
 
 #footer{
 	clear: both;
-	width: 80%;
+	width: 100%;
 	margin: 0 auto;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	color: #4aaaa5;
 	background-color: #666666;
-	padding: 10px;
+	padding: 20px;
 	align-content: center;
 	text-align: center;
-	color: #4aaaa5;
+	
 
 }
