--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,8 +11,8 @@ header{
 	align-content: center;
 	text-align: center;
 	padding: 15px;
-	margin-left: 105px;
-	margin-right: 475px;
+	margin-left: 150px;
+	margin-right: 500px;
 	float: left;
 	font-family:'Georgia', Times, Times New Roman, serif;
 
@@ -43,19 +43,46 @@ h3{
 
 }
 
+h4{
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	color: #ffffff;
+}
+
+input{
+	background-color: #ffffff;
+	border-color: #dddddd;
+	border-style: solid;
+	border-width: 2px;
+	width: 100%;
+	
+}
+
 .title{
 	border-bottom-color: #dddddd
 	border-bottom-style: solid;
 	border-width: 2px;
 }
 
-.links{
+#navbar{
 	align-content: center;
 	text-align: center;
-	width: 5%;
-	float: left;
+	/*float: left;*/
 	padding-top: 25px;
+	list-style: none;
 
+
+}
+
+#navbar li{
+	float: left;
+}
+
+#navbar li a{
+	display: inline-block;
+	text-align: center;
+	padding-right: 16px;
+	text-decoration: none;
+	font-size: 17px;
 }
 
 .tabs{
@@ -69,19 +96,10 @@ h3{
 
 }
 
-.messagebox{
-	
-	width: 625px;
-	height: 200px;
-	margin: 5px;
-	border-width: 2px;
-	border-color: #dddddd;
-	border-style: solid;
 
-}
 
 .portfolioimage{
-	width: 100px;
+	width: 200px;
 	height: 100px;
 	margin: 50px;
 	float: left;
@@ -90,18 +108,21 @@ h3{
 #maincontent{
 	clear: both;
 	width: 100%;
-	height: 550px;
+	height: 750px;
 	margin: 0 auto;
-	background-image: url("assets/images/cork-wallet.png");
+	position: relative;
+	background-image: url("assets/images/dark_embroidery.png");
+	/*background-repeat: no-repeat;*/
 	border-style: solid;
 	border-top-color: #dddddd;
 	border-bottom-color: #4aaaa5;
-	border-width: 5px;
+	border-top-width: 5px;
+	border-bottom-width:5px;
+	/*background-color: #ddd3d0;*/
 
 }
 
 #mainbody{
-	float: left;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	background-color: #ffffff;
 	border-color: #dddddd;
@@ -109,10 +130,12 @@ h3{
 	border-width: 5px;
 	width: 650px;
 	padding: 5px;
-	margin-left:100px; 
-	margin-top: 50px;
-	margin-right: 50px;
+	margin:50px; 
 	align-content: center;
+	position: absolute;
+	top: 0px;
+	left: 100px;
+	
 
 }
 
@@ -127,7 +150,6 @@ h3{
 
 
 #connect{
-	float: left;
 	align-content: center;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	width: 270px;
@@ -137,37 +159,45 @@ h3{
 	border-color: #dddddd;
 	border-style: solid;
 	border-width: 5px;
+	position: absolute;
+	top: 0px;
+	right: 100px;
+	
 
 }
 
 
 
-#inputbox{
-	background-color: #ffffff;
+
+
+#message{
+	
+	width: 99%;
+	height: 200px;
+	margin: 5px;
+	border-width: 2px;
 	border-color: #dddddd;
 	border-style: solid;
-	border-width: 2px;
-	width: 625px;
-	height: 14px;
-	margin: 5px;
+
 }
 
 #submit{
 	background: #4aaaa5;
+	color: #ffffff;
 	align-content: center;
 	text-align: center;
-	padding: 15px;
+	padding: 10px;
 	margin: 10px;
 	float: left;
 	font-family:'Georgia', Times, Times New Roman, serif;
+	font-size: 16px;
+	width: 20%;
 }
 
 #footer{
 	clear: both;
 	width: 100%;
 	margin: 0 auto;
-	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	color: #4aaaa5;
 	background-color: #666666;
 	padding: 20px;
 	align-content: center;
