html and css updated for potforlio page and navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,8 +29,8 @@ h2{
 	font-size: 24px;
 	margin-left: 30px;
 	font-family: 'Georgia', Times, Times New Roman, serif;
-	/*border-bottom-color: #dddddd
-	border-bottom-style: solid;*/
+	
+	
 }
 
 h3{
@@ -38,14 +38,17 @@ h3{
 	font-size: 20px;
 	margin-left: 30px;
 	font-family: 'Georgia', Times, Times New Roman, serif;
-	/*border-bottom-color: #dddddd
-	border-bottom-style: solid;*/
-
+	
 }
 
 h4{
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	color: #ffffff;
+}
+
+p{
+	font-size: 16px;
+	line-height: 20px;
 }
 
 input{
@@ -54,19 +57,23 @@ input{
 	border-style: solid;
 	border-width: 2px;
 	width: 100%;
+	line-height: 20px
 	
 }
 
 .title{
+	background-color: #ffffff;
 	border-bottom-color: #dddddd
 	border-bottom-style: solid;
-	border-width: 2px;
+	border-bottom-width: 2px;
+	width: 90%;
+	padding: 10px
+	margin: 10px;
 }
 
 #navbar{
 	align-content: center;
 	text-align: center;
-	/*float: left;*/
 	padding-top: 25px;
 	list-style: none;
 
@@ -85,25 +92,7 @@ input{
 	font-size: 17px;
 }
 
-.tabs{
-	font-size: 12px;
-}
 
-.socialimage{
-	width: 50px;
-	height: 50px;
-	margin: 10px;
-
-}
-
-
-
-.portfolioimage{
-	width: 200px;
-	height: 100px;
-	margin: 50px;
-	float: left;
-}
 
 #maincontent{
 	clear: both;
@@ -111,16 +100,16 @@ input{
 	height: 750px;
 	margin: 0 auto;
 	position: relative;
-	background-image: url("assets/images/dark_embroidery.png");
-	/*background-repeat: no-repeat;*/
+	/*background-image: url("assets/images/cork-wallet.png");*/
 	border-style: solid;
 	border-top-color: #dddddd;
 	border-bottom-color: #4aaaa5;
 	border-top-width: 5px;
 	border-bottom-width:5px;
-	/*background-color: #ddd3d0;*/
-
+	background-color: #d0d0d0;	
+	
 }
+
 
 #mainbody{
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
@@ -129,7 +118,8 @@ input{
 	border-style: solid;
 	border-width: 5px;
 	width: 650px;
-	padding: 5px;
+	height: 650px;
+	padding: 20px;
 	margin:50px; 
 	align-content: center;
 	position: absolute;
@@ -144,16 +134,90 @@ input{
 	width: 175px;
 	height: 175px;
 	float: left;
-	margin-left: 20px;
-	margin-right: 20px;
+	margin: 20px;
+	
+}
+
+.socialimage{
+	width: 50px;
+	height: 50px;
+	margin: 10px;
+
 }
 
 
+.block{
+	width: 200px;
+	height: 150px;
+	margin: 25px 50px 25px 50px;
+
+}
+
+.block a{
+	text-decoration: none;
+}
+
+
+#block1{
+	position:absolute;
+	top: 30px; 
+	left: 0px;
+
+}
+
+#block2{
+	position:absolute;
+	top: 30px; 
+	right: 0px;
+
+}
+
+#block3{
+	position:absolute;
+	top: 230px; 
+	left: 0px;
+
+}
+
+#block4{
+	position:absolute;
+	top: 230px; 
+	right: 0px;
+
+}
+
+#block5{
+	position:absolute;
+	top: 430px; 
+	left: 0px;
+
+}
+
+.portfolioimage{
+	
+	width: 100%;
+	height: 100%;
+}
+
+.banner{
+	background: #4aaaa5;
+	color: #ffffff;
+	align-content: center;
+	text-align: center;
+	padding: 10px;
+	font-family:'Georgia', Times, Times New Roman, serif;
+	font-size: 16px;
+	width: 100%;
+	position:absolute;
+	bottom: 5px;
+	right: 0px;
+}
+
 #connect{
 	align-content: center;
-	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	font-family: 'Georgia', Times, Times New Roman, serif;
 	width: 270px;
-	padding: 5px;
+	padding: 20px;
 	margin: 50px;
 	background-color: #ffffff;
 	border-color: #dddddd;
@@ -167,13 +231,10 @@ input{
 }
 
 
-
-
-
 #message{
 	
 	width: 99%;
-	height: 200px;
+	height: 400px;
 	margin: 5px;
 	border-width: 2px;
 	border-color: #dddddd;
