--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,14 +19,15 @@ header{
 }
 
 h1{
-	font-size: 28px;
+	font-size: 30px;
 	color: #ffffff;
 	font-family: 'Georgia', Times, Times New Roman, serif;
+	font-weight: bold;
 }
 
 h2{
 	color: #4aaaa5;
-	font-size: 24px;
+	font-size: 28px;
 	margin-left: 30px;
 	font-family: 'Georgia', Times, Times New Roman, serif;
 	
@@ -35,7 +36,7 @@ h2{
 
 h3{
 	color: #4aaaa5;
-	font-size: 20px;
+	font-size: 22px;
 	margin-left: 30px;
 	font-family: 'Georgia', Times, Times New Roman, serif;
 	
@@ -63,11 +64,11 @@ input{
 
 .title{
 	background-color: #ffffff;
-	border-bottom-color: #dddddd
+	border-bottom-color: #666666;
 	border-bottom-style: solid;
 	border-bottom-width: 2px;
 	width: 90%;
-	padding: 10px
+	padding: 10px 0px 10px 0px;
 	margin: 10px;
 }
 
@@ -97,16 +98,16 @@ input{
 #maincontent{
 	clear: both;
 	width: 100%;
-	height: 750px;
+	height: 850px;
 	margin: 0 auto;
 	position: relative;
-	/*background-image: url("assets/images/cork-wallet.png");*/
+	background-image: url("../images/dark_embroidery.png");
 	border-style: solid;
 	border-top-color: #dddddd;
 	border-bottom-color: #4aaaa5;
 	border-top-width: 5px;
 	border-bottom-width:5px;
-	background-color: #d0d0d0;	
+		
 	
 }
 
@@ -118,7 +119,7 @@ input{
 	border-style: solid;
 	border-width: 5px;
 	width: 650px;
-	height: 650px;
+	height: 750px;
 	padding: 20px;
 	margin:50px; 
 	align-content: center;
@@ -160,35 +161,35 @@ input{
 
 #block1{
 	position:absolute;
-	top: 30px; 
+	top: 70px; 
 	left: 0px;
 
 }
 
 #block2{
 	position:absolute;
-	top: 30px; 
+	top: 70px; 
 	right: 0px;
 
 }
 
 #block3{
 	position:absolute;
-	top: 230px; 
+	top: 270px; 
 	left: 0px;
 
 }
 
 #block4{
 	position:absolute;
-	top: 230px; 
+	top: 270px; 
 	right: 0px;
 
 }
 
 #block5{
 	position:absolute;
-	top: 430px; 
+	top: 470px; 
 	left: 0px;
 
 }
